--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,3 +48,6 @@ body {
 .sticky + .content {
   padding-top: 60px;
 }
+
+div.main > h1 {
+  background-image: linear-gradient(0deg,#0fe63f7d 50%,transparent 50%);
