--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,6 +49,6 @@ body {
   padding-top: 60px;
 }
 
-div.main > h1 {
+main > h1 {
   background-image: linear-gradient(0deg,#0fe63f7d 50%,transparent 50%);
 }
