--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,5 +50,9 @@ body {
 }
 
 main > h1 {
+  text-align: center;
+}
+
+main > h1 > span {
   background-image: linear-gradient(0deg,#0fe63f7d 50%,transparent 50%);
 }
