--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,3 +56,12 @@ main > h1 {
 main > h1 > span {
   background-image: linear-gradient(0deg,#0fe63f7d 50%,transparent 50%);
 }
+
+.articleLink {
+  text-decoration: none;
+}
+
+.articleLink:hover{
+  box-shadow: "none";
+  background-image: "linear-gradient(0deg,#0fe63f7d 50%,transparent 50%)"
+}
